--- a/p8105_hw3_js6177.md
+++ b/p8105_hw3_js6177.md
@@ -130,7 +130,7 @@ accel %>%
   scale_color_discrete(name = "Day of the week")
 ```
 
-<img src="p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-4-1.png" width="90%" />
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
 
 Most activity happened between 6:00-22:00. On Monday and Friday night
 (20:00-21:00) as well as Saturday morning (9:00-11:00) we see spikes in
@@ -165,7 +165,7 @@ accel %>%
   )
 ```
 
-<img src="p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
 
 ## Problem 3
 
@@ -180,9 +180,7 @@ The size of the dataset is 2595176 x 7, with2595176 observations and 7
 variables, including `id` (Weather station ID), `date` (Date of
 observation), `prcp` (Precipitation (tenths of mm)), `snow` (Snowfall
 (mm)), `snwd` (Snow depth (mm)), `tmax` (Maximum temperature (tenths of
-degrees C)) and `tmin` (Minimum temperature (tenths of degrees C)). The
-varibale classes are character, Date, integer, integer, integer,
-character, character.
+degrees C)) and `tmin` (Minimum temperature (tenths of degrees C)).
 
 The codes below shows the structure of the dataset.
 
@@ -209,14 +207,20 @@ str(ny_noaa)
     ##   ..   tmin = col_character()
     ##   .. )
 
-There are many missing values in columns `prcp:tmax`, which can cause
-problems in numeric analysis.
+`id`, `tmax`, `tmin` are character variables, `date` is date variable,
+and `prcp`, `snow`, `snwd` are integer variables.
+
+The proportion of missing values 0.06 for `prcp`, 0.15 for `snow`, 0.23
+for `snwd`, 0.44 for `tmax`, 0.44 for `tmin`. Since most of them is
+larger than 10%, I think the missing value will influence the
+exploratory numeric analysis to some extent.
 
 ### (1)
 
 The code belows do the data cleaning: separate `date` variable into
-`year`, `month`, and `day`, and convert`tmin` and `tmax` from character
-to numeric variables.
+`year`, `month`, and `day`, convert`tmin` and `tmax` from character to
+numeric variables, and ensure observations for temperature,
+precipitation, and snowfall are given in reasonable units.
 
 ``` r
 ny_noaa_tidy = 
@@ -224,8 +228,9 @@ ny_noaa_tidy =
     year = as.integer(lubridate::year(date)), 
     month = as.integer(lubridate::month(date)), 
     day = as.integer(lubridate::day(date)),
-    tmin = as.numeric(tmin),
-    tmax = as.numeric(tmax)
+    prcp = prcp/10,
+    tmin = as.numeric(tmin)/10,
+    tmax = as.numeric(tmax)/10
     ) %>% 
   select(id,date,year,month,day,prcp:tmin) 
   
@@ -237,117 +242,159 @@ ny_noaa_tidy %>% summarise(median_snow = median(snow, na.rm = T))
     ##         <int>
     ## 1           0
 
-The most commonly observed values for snowfall is 0 mm. This is because
+The most commonly observed values for snowfall is 0 mm (using R inline
+code to calculate median).
 
 ### (2)
 
+I use `group_by` based on `id`, `year` and `month` to calculate the
+average max temperature in January and July in each station
+respectively, and make a two-panel scatter plot to show the average
+`tmax` across years.
+
 ``` r
-jan_data = 
 ny_noaa_tidy %>% 
   mutate(month = month.abb[month]) %>% 
-  filter(month == "Jan") %>% 
-  group_by(id) %>% 
-  summarise(avg_tmax = mean(tmax, na.rm = TRUE)) %>% 
-  drop_na(avg_tmax)
-
-jan_plot =  jan_data %>% 
-  ggplot(aes(x = id, y = avg_tmax))+
-  geom_point()
-
-jul_data = 
-  ny_noaa_tidy %>% 
-  mutate(month = month.abb[month]) %>% 
-  filter(month == "Jul") %>% 
-  group_by(id) %>% 
-  summarise(avg_tmax = mean(tmax, na.rm = TRUE))
-
-jul_plot = jul_data %>% 
-  drop_na(avg_tmax) %>% 
-  ggplot(aes(x = id, y = avg_tmax))+
-  geom_point()
-
-jan_plot / jul_plot
+  filter(month %in% c("Jan","Jul")) %>% 
+  group_by(id,year,month) %>% 
+  mutate(avg_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  filter(!(is.na(avg_tmax))) %>% 
+  
+  ggplot(aes(x = year, y = avg_tmax, color = id))+
+  geom_point(alpha = .1) +
+  facet_grid(month ~., scales = "free_y") +
+  labs(
+    title = "Average maximum temperature in Jan and Jul in each station",
+    x = "year",
+    y = "Average maximum daily temperature (C)",
+    caption = "Data from NOAA")+
+  theme(legend.position = "none")
 ```
 
-<img src="p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
-The data points for both Jan and Jul seem to follow normal distribution.
+From the plot, it seems that both the distributions are normal. The
+average max temperature in January centers around -0.2C while that in
+July centers around 27C. The max temperature of January varies more than
+that of July.
 
 I use boxplot to identify outliers.
 
 ``` r
-jan_data %>% 
-  ggplot(aes(x = avg_tmax))+geom_boxplot()+
-  labs(
-    title = "Average max temperature in Jan",
-    x = "Station id",
-    y = "Average max temperature"
-  )
+ny_noaa_tidy %>% 
+  mutate(month = month.abb[month]) %>% 
+  filter(month %in% c("Jan","Jul")) %>% 
+  group_by(id,month) %>% 
+  mutate(avg_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  filter(!(is.na(avg_tmax))) %>% 
+  ggplot(aes(x = month, y = avg_tmax))+
+  geom_boxplot()+
+  labs(y = "Average maximum daily temperature (C)",
+    x = "Month",
+    caption = "Data from NOAA")
 ```
 
-<img src="p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
-
-``` r
-jul_data %>% 
-  ggplot(aes(x = avg_tmax))+geom_boxplot()+
-  labs(
-    title = "Average max temperature in Jul",
-    x = "Station id",
-    y = "Average max temperature"
-  )
-```
-
-    ## Warning: Removed 449 rows containing non-finite values (stat_boxplot).
-
-<img src="p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
 Therefore, I can find the outliers for average max temperature in
 January and July respectively using the following code.
 
 ``` r
-rbind(jan_data %>% filter(min_rank(avg_tmax)<4),
-      jan_data %>% filter(min_rank(desc(avg_tmax))<2))
+rbind(
+  ny_noaa_tidy %>% 
+  mutate(month = month.abb[month]) %>% 
+  filter(month == "Jan") %>% 
+  group_by(id) %>% 
+  summarise(avg_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  filter(min_rank(avg_tmax)<4),
+  ny_noaa_tidy %>% 
+  mutate(month = month.abb[month]) %>% 
+  filter(month == "Jan") %>% 
+  group_by(id) %>% 
+  summarise(avg_tmax = mean(tmax, na.rm = TRUE)) %>%
+  filter(min_rank(desc(avg_tmax))<3))
+```
+
+    ## # A tibble: 5 × 2
+    ##   id          avg_tmax
+    ##   <chr>          <dbl>
+    ## 1 USC00301723    -9.98
+    ## 2 USC00302720    -8.02
+    ## 3 USC00305925   -12.2 
+    ## 4 USC00305380     5.67
+    ## 5 USC00306138     4.99
+
+``` r
+rbind(
+  ny_noaa_tidy %>% 
+  mutate(month = month.abb[month]) %>% 
+  filter(month == "Jul") %>% 
+  group_by(id) %>% 
+  summarise(avg_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  filter(min_rank(avg_tmax)<3),
+  ny_noaa_tidy %>% 
+  mutate(month = month.abb[month]) %>% 
+  filter(month == "Jul") %>% 
+  group_by(id) %>% 
+  summarise(avg_tmax = mean(tmax, na.rm = TRUE)) %>%
+  filter(min_rank(desc(avg_tmax))<3))
 ```
 
     ## # A tibble: 4 × 2
     ##   id          avg_tmax
     ##   <chr>          <dbl>
-    ## 1 USC00301723    -99.8
-    ## 2 USC00302720    -80.2
-    ## 3 USC00305925   -122  
-    ## 4 USC00305380     56.7
-
-``` r
-rbind(jul_data %>% filter(min_rank(avg_tmax)<6),
-      jul_data %>% filter(min_rank(desc(avg_tmax))<2))
-```
-
-    ## # A tibble: 6 × 2
-    ##   id          avg_tmax
-    ##   <chr>          <dbl>
-    ## 1 USC00300424     235.
-    ## 2 USC00304102     235.
-    ## 3 USC00305769     233.
-    ## 4 USC00307799     224.
-    ## 5 USC00308248     235.
-    ## 6 USC00305804     315.
+    ## 1 USC00305769     23.3
+    ## 2 USC00307799     22.4
+    ## 3 USC00305380     30.4
+    ## 4 USC00305804     31.5
 
 ### (3)
+
+To better reduce overlapping, I use hexagonal heatmap instead of
+traditional scatterplot to plot `tmax` vs `tmin`. I use ridgeline
+visualization to show the distribution of snowfall values greater than 0
+and less than 100 separately by year.
 
 ``` r
 tmax_tmin = 
   ny_noaa_tidy %>% 
-  pivot_longer(
-    tmax:tmin,
-    names_to = "observation",
-    values_to = "temp"
-  ) %>% 
-ggplot(aes(x = temp, fill = observation))+
-geom_density(alpha = .7)
+  ggplot(aes(x = tmin, y = tmax))+
+  geom_hex()+
+    labs(
+    title = "Maximum temperature vs minimum temperature",
+    x = "Minimum temperature (C)",
+    y = "Maximum temperature (C)"
+  ) +
+  theme(legend.position = "right",
+        plot.title = element_text(size = 13))
 
 snowfall = 
-  ny_noaa_tidy %>% 
-  group_by(year) %>% 
-  filter(snow>0) %>% 
-  ggplot(aes())
+  ny_noaa_tidy %>%
+  filter(snow>0,snow<100) %>%
+  mutate(year = as.character(year)) %>% 
+  ggplot(aes(x = snow, y = year)) + 
+  geom_density_ridges(scale = 0.85)+
+  labs(
+    title = "The distribution of snowfall in each year",
+    y = "Year",
+    x = "Snow fall (mm)",
+    caption = "Data from NOAA"
+  ) +
+  scale_y_discrete(breaks = c("1981", "1986", "1991", "1996", "2001", "2006", "2010"))+
+  theme(plot.title = element_text(size = 13))
+
+tmax_tmin / snowfall + plot_layout(ncol = 1, heights = c(1.5,2))
 ```
+
+    ## Picking joint bandwidth of 3.76
+
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
+From the plot `tmax_tmin`, we can see that there are some outliers,
+where extreme temperatures are reached. This may be because of wrong
+records based on common sense. The maximum temperature centers around
+14C while the minimum temperature centers around 3C.
+
+The distributions of snowfall for all years are right-skewed, centering
+around 20-30mm. The maximum snowfall can reach over 80, which indicates
+either a horrible disaster or wrong recording.
