--- a/p8105_hw3_js6177.md
+++ b/p8105_hw3_js6177.md
@@ -7,7 +7,117 @@ Jiayi Shi
 ``` r
 library(p8105.datasets)
 data("instacart")
+
+instacart = 
+  instacart %>% 
+  as_tibble(instacart)
 ```
+
+his dataset contains 1384617 rows and 15 columns, with each row
+resprenting a single product from an instacart order. Variables include
+identifiers for user, order, and product; the order in which each
+product was added to the cart. There are several order-level variables,
+describing the day and time of the order, and number of days since prior
+order. Then there are several item-specific variables, describing the
+product name (e.g. Yogurt, Avocado), department (e.g. dairy and eggs,
+produce), and aisle (e.g. yogurt, fresh fruits), and whether the item
+has been ordered by this user in the past. In total, there are 39123
+products found in 131209 orders from 131209 distinct users.
+
+Below is a table summarizing the number of items ordered from aisle. In
+total, there are 134 aisles, with fresh vegetables and fresh fruits
+holding the most items ordered by far.
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  arrange(desc(n))
+```
+
+    ## # A tibble: 134 × 2
+    ##    aisle                              n
+    ##    <chr>                          <int>
+    ##  1 fresh vegetables              150609
+    ##  2 fresh fruits                  150473
+    ##  3 packaged vegetables fruits     78493
+    ##  4 yogurt                         55240
+    ##  5 packaged cheese                41699
+    ##  6 water seltzer sparkling water  36617
+    ##  7 milk                           32644
+    ##  8 chips pretzels                 31269
+    ##  9 soy lactosefree                26240
+    ## 10 bread                          23635
+    ## # … with 124 more rows
+
+Next is a plot that shows the number of items ordered in each aisle.
+Here, aisles are ordered by ascending number of items.
+
+``` r
+instacart %>% 
+  count(aisle) %>% 
+  filter(n > 10000) %>% 
+  mutate(aisle = fct_reorder(aisle, n)) %>% 
+  ggplot(aes(x = aisle, y = n)) + 
+  geom_point() + 
+  labs(title = "Number of items ordered in each aisle") +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1))
+```
+
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+
+Our next table shows the three most popular items in aisles
+`baking ingredients`, `dog food care`, and `packaged vegetables fruits`,
+and includes the number of times each item is ordered in your table.
+
+``` r
+instacart %>% 
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
+  group_by(aisle) %>% 
+  count(product_name) %>% 
+  mutate(rank = min_rank(desc(n))) %>% 
+  filter(rank < 4) %>% 
+  arrange(desc(n)) %>%
+  knitr::kable()
+```
+
+| aisle                      | product_name                                  |    n | rank |
+|:---------------------------|:----------------------------------------------|-----:|-----:|
+| packaged vegetables fruits | Organic Baby Spinach                          | 9784 |    1 |
+| packaged vegetables fruits | Organic Raspberries                           | 5546 |    2 |
+| packaged vegetables fruits | Organic Blueberries                           | 4966 |    3 |
+| baking ingredients         | Light Brown Sugar                             |  499 |    1 |
+| baking ingredients         | Pure Baking Soda                              |  387 |    2 |
+| baking ingredients         | Cane Sugar                                    |  336 |    3 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |   30 |    1 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |   28 |    2 |
+| dog food care              | Small Dog Biscuits                            |   26 |    3 |
+
+Finally is a table showing the mean hour of the day at which Pink Lady
+Apples and Coffee Ice Cream are ordered on each day of the week. This
+table has been formatted in an untidy manner for human readers. Pink
+Lady Apples are generally purchased slightly earlier in the day than
+Coffee Ice Cream, with the exception of day 5.
+
+``` r
+instacart %>%
+  filter(product_name %in% c("Pink Lady Apples", "Coffee Ice Cream")) %>%
+  group_by(product_name, order_dow) %>%
+  summarize(mean_hour = mean(order_hour_of_day)) %>%
+  #spread(key = order_dow, value = mean_hour) %>%
+  pivot_wider(
+    names_from = "order_dow",
+    values_from = "mean_hour"
+  ) %>% 
+  knitr::kable(digits = 2)
+```
+
+    ## `summarise()` has grouped output by 'product_name'. You can override using the
+    ## `.groups` argument.
+
+| product_name     |     0 |     1 |     2 |     3 |     4 |     5 |     6 |
+|:-----------------|------:|------:|------:|------:|------:|------:|------:|
+| Coffee Ice Cream | 13.77 | 14.32 | 15.38 | 15.32 | 15.22 | 12.26 | 13.83 |
+| Pink Lady Apples | 13.44 | 11.36 | 11.70 | 14.25 | 11.55 | 12.78 | 11.94 |
 
 ## Problem 2
 
@@ -130,7 +240,7 @@ accel %>%
   scale_color_discrete(name = "Day of the week")
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
 
 Most activity happened between 6:00-22:00. On Monday and Friday night
 (20:00-21:00) as well as Saturday morning (9:00-11:00) we see spikes in
@@ -168,7 +278,7 @@ accel %>%
     discrete = TRUE) 
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
 ## Problem 3
 
@@ -276,7 +386,7 @@ ny_noaa_tidy %>%
   theme(legend.position = "none")
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
 
 From the plot, it seems that both the distributions are normal. The
 average max temperature in January centers around -0.2C while that in
@@ -299,7 +409,7 @@ ny_noaa_tidy %>%
     caption = "Data from NOAA")
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
 
 Therefore, I can find the outliers for average max temperature in
 January and July respectively using the following code.
@@ -395,7 +505,7 @@ snowfall =
 tmax_tmin + snowfall
 ```
 
-![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+![](p8105_hw3_js6177_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
 
 From the plot `tmax_tmin`, we can see that there are some outliers,
 where extreme temperatures are reached. This may be because of wrong
